# sycore

./: .gitignore  README.md  pyproject.toml
src/sycore/: __init__.py
src/sycore/agents/: __init__.py  base.py  dynamic.py  factory.py
src/sycore/core/: __init__.py  llm.py
src/sycore/pipeline/: __init__.py  context.py  executor.py  loader.py  registry.py  stages.py
src/sycore/prompts/: __init__.py  loader.py
src/sycore/resources/: __init__.py  loader.py
src/sycore/skills/: __init__.py  base.py  registry.py
